--- a/homework1.Rmd
+++ b/homework1.Rmd
@@ -24,13 +24,14 @@ library(ggrepel)
 
 ##Exercises
 
-`1.
+`1.how many pets are included in this dataset?
+
 
 (4 points)
 ```{r}
 
 ```
-Write your narrative here
+>52.519
 
 
 
