--- a/homework1.Rmd
+++ b/homework1.Rmd
@@ -46,15 +46,45 @@ library(ggrepel)
 
 
 `3. Copy the code provided in the homework documentation and paste it here. 
->seattlepets %>%
-count(animal_name, sort = TRUE)
 
->seattlepets %>%
-group_by(species) %>%
-count(animal_name, sort = TRUE)
+# A tibble: 13,930 x 2
+   animal_name     n
+   <chr>       <int>
+ 1 NA            483
+ 2 Lucy          439
+ 3 Charlie       387
+ 4 Luna          355
+ 5 Bella         331
+ 6 Max           270
+ 7 Daisy         261
+ 8 Molly         240
+ 9 Jack          232
+10 Lily          232
+# … with 13,920 more rows
 
->seattlepets %>%
-count(species, sort = TRUE)
+# A tibble: 16,823 x 3
+# Groups:   species [4]
+   species animal_name     n
+   <chr>   <chr>       <int>
+ 1 Cat     NA            406
+ 2 Dog     Lucy          337
+ 3 Dog     Charlie       306
+ 4 Dog     Bella         249
+ 5 Dog     Luna          244
+ 6 Dog     Daisy         221
+ 7 Dog     Cooper        189
+ 8 Dog     Lola          187
+ 9 Dog     Max           186
+10 Dog     Molly         186
+# … with 16,813 more rows
+
+# A tibble: 4 x 2
+  species     n
+  <chr>   <int>
+1 Dog     35181
+2 Cat     17294
+3 Goat       38
+4 Pig         6
 
 (4 points)
 
@@ -66,9 +96,21 @@ Write your narrative here
 
 
 `4.
->seattlepets %>%
-group_by(species) %>% count(animal_name, sort = TRUE) %>% slice_max(n, n = 5)
-%>% arrange(species, n)
+# A tibble: 53 x 3
+# Groups:   species [4]
+   species animal_name     n
+   <chr>   <chr>       <int>
+ 1 Cat     NA            406
+ 2 Cat     Luna          111
+ 3 Cat     Lucy          102
+ 4 Cat     Lily           86
+ 5 Cat     Max            83
+ 6 Dog     Lucy          337
+ 7 Dog     Charlie       306
+ 8 Dog     Bella         249
+ 9 Dog     Luna          244
+10 Dog     Daisy         221
+# … with 43 more rows
 
 (10 points)
 
