--- a/homework1.Rmd
+++ b/homework1.Rmd
@@ -124,8 +124,8 @@ Oliver and  lily
 
 (4 points)
 
-`6. Is the relationship between the two variables (proportion of cats with a given name and proportion of dogs with a given name) positive or negative? What does this mean in context of the data?
+`6. Is the relationship between the two variables (proportion of cats with a given name and proportion of dogs with a given name) positive or negative? What does this mean in context of the data ?
 
-Answer here
+Poitive,if the names of the dogs increased, the names of the cats increased, and if the names of the dogs decreased, the names of the cats also decreased.
 
 (4 points)
